feat(server): Migrate campaign infra to sqlite compatible and Add JPA support. Clean all.